feat:sign up design todo:post db

--- a/front/app/src/styles/globals.css
+++ b/front/app/src/styles/globals.css
@@ -86,13 +86,6 @@ body {
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
   padding-left: 5vw;
   padding-right: 5vw;
 }
@@ -104,6 +97,6 @@ a {
 
 @media (prefers-color-scheme: dark) {
   html {
-    color-scheme: dark;
+    color-scheme: #F9F9F9;
   }
 }
