--- a/front/app/src/styles/SignUp.module.css
+++ b/front/app/src/styles/SignUp.module.css
@@ -39,3 +39,28 @@
   color: #f9f9f9;
   margin: 30px 0 0 0;
 }
+.register_button{
+    width: 210px;
+    height: 48px;
+    border-radius: 24px;
+    background: #e68147;
+    border: none;
+    color: #f9f9f9;
+}
+.login_button{
+    width: 210px;
+    height: 48px;
+    border-radius: 24px;
+    background: transparent;
+    border: 1px solid #525252;
+    color: #525252;
+}
+.other_buttons{
+    border-top: 1px solid #525252;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 210px;
+    padding-top: 30px;
+    gap: 15px;
+}
