--- a/front/app/src/styles/Calendar.module.css
+++ b/front/app/src/styles/Calendar.module.css
@@ -45,25 +45,25 @@
     margin-top: 10px;
 }
 
-/*ここから↓CalendarEvent.tsx*/
-.events{
-
+/*ここから↓CalendarEventBlock.tsx*/
+.allEvents{
+    background-color: #D0D0D0;
 }
-.events h2{
+.allEvents h2{
     font-size: 24px;
-    color: #525252;
-    margin-bottom: 17px;
-}
-.mainEvents{
-
 }
 .eachEvents{
     display: flex;
     justify-content: space-between;
 }
-.eventDetails{
-
+.eachEvents h2{
+    font-size: 18px;
 }
-.doneEvents{
-
+.eachEventDetails{
+    display: flex;
+    width: 40vw;
+    justify-content: space-between;
+}
+.eachEventDetails p{
+    font-size: 14px;
 }
