globalcssの修正、カレンダー作成画面の修正。

--- a/front/app/src/styles/globals.css
+++ b/front/app/src/styles/globals.css
@@ -123,14 +123,14 @@ h3 {
   font-family: 'Zen Kaku Gothic New', sans-serif;
   font-size: 18px;
   color: #525252;
-  font-weight: regular;
+  font-weight: normal;
 }
 
 p {
   font-family: 'Zen Kaku Gothic New', sans-serif;
   font-size: 14px;
   color: #525252;
-  font-weight: regular;
+  font-weight: normal;
 }
 
 
