--- a/front/app/src/styles/CreateCalenderid.module.css
+++ b/front/app/src/styles/CreateCalenderid.module.css
@@ -19,16 +19,18 @@
 }
 
 .container {
+  height: 100vh;
   display: flex;
+  justify-content: center;
   align-items: center;
-  font-display: column;
+  flex-direction: column;
   gap: 30px;
 }
 
 .buttons {
   display: flex;
   align-items: center;
-  font-display: column;
+  flex-direction: column;
   gap: 10px;
   text-align: center;
 }
@@ -41,8 +43,11 @@
   border: 1px solid #525252;
 }
 
-.button_color {
+.buttons .button_color {
   background-color: #e68147;
   border: none;
+}
+
+.buttons .button_color p {
   color: #f9f9f9;
 }
